deployments/pathweb/unpackerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unpackerr
  namespace: media-services
  labels:
    app.kubernetes.io/name: unpackerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: unpackerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unpackerr
    spec:
      nodeSelector:
        kubernetes.io/hostname: pathweb-worker-baldric
      containers:
      - name: unpackerr
        image: hotio/unpackerr:latest
        volumeMounts:
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: okinawa-downloads
